--- a/PARCIAL1.cbp
+++ b/PARCIAL1.cbp
@@ -31,10 +31,6 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="cliente.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="cliente.h" />
 		<Unit filename="color.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -70,10 +66,6 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="utn.h" />
-		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
-		</Extensions>
+		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
